fixed minimal overflow x

--- a/src/app/portfolio/portfolio.component.css
+++ b/src/app/portfolio/portfolio.component.css
@@ -30,6 +30,10 @@
 
 /* typography classes */
 
+#portfolio-page {
+  overflow-x: hidden;
+}
+
 .player-img {
   display: block;
   width: 8rem;
@@ -103,7 +107,7 @@
 .experience-img {
   display: block;
   width: 100%;
-  min-width: 6.5rem;
+  min-width: 5rem;
   max-width: 9.25rem;
 }
 
@@ -124,6 +128,10 @@
 
 .no-margin {
   margin: 0 !important;
+}
+
+.no-padding {
+  padding: 0 !important;
 }
 
 /* stats cells */
